# exchSGX

./: .gitignore  .gitmodules  README.rst
conf/: bitcoin.conf  litecoin.conf
contracts/: requirements.txt
contracts/python/: client.py  deploy_exch.py  deploy_token.py  server.py  test.py
contracts/python/contract_utils/: __init__.py  exchange_with_token.py  token.py
contracts/python/contract_utils/abi/: Exchange.abi  ExchangeWithToken.abi  GasCoin.abi
contracts/solidity/: Exchange.sol  ExchangeWithToken.sol  SafeMath.sol  Token.sol
demo/: README.rst  bitcoin-deposit.js  litecoin-deposit.js  setup.sh  testnet_bitcoin.js  testnet_litecoin.js
scripts/: download-sdk.sh  install-sdk.sh  sgx-enter.sh  sgx.sh
src/: orderbook.cpp
src/merkpath/: Makefile  merkpath.cpp
src/merkpath/txdata/: hex2base64.cpp  tx390580base64.txt
src/pki/: CA1.crt  CA1.csr  CA1.key  CA1.srl  CA2.crt  CA2.csr  CA2.key  CA3.crt  CA3.csr  CA3.key  CA4.crt  CA4.csr  CA4.key  CA5.crt  CA5.csr  CA5.key  README.md  cert0.pem  cert1.pem  cert2.pem  cert3.pem  cert4.pem  client1.crt  client1.csr  client1.priv  client1.pub  client2.crt  client2.csr  client2.priv  client2.pub  client3.crt  client3.csr  client3.priv  client3.pub  client4.crt  client4.csr  client4.priv  client4.pub  client5.crt  client5.csr  (+10 more)
src/sgx/: .clang-format  .gitignore  1ea82d.merkle  CMakeLists.txt  README.md  bitcoin.conf  config.toml  format.sh
src/sgx/App/: Enclave_u.h
src/sgx/Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Log.c  Log.h  README  balancebook.hpp  bitcoin_helpers.cpp  bitcoin_helpers.h  blockfifo.cpp  blockfifo.h  blockfifo.hpp  bytestream.cpp  bytestream.h  cltvtest  ecalls.cpp  enclave_test.cpp  exception.cpp  exception.h  exch_ca.h  fairness.cpp  fairness.h  hybrid_cipher.cpp  hybrid_cipher.h  id_t.cpp  id_t.h  key_ecdsa_t.h  key_rsa_t.cpp  key_rsa_t.h  key_t.cpp  latest_blocks.cpp  latest_blocks.h  lest.hpp  log.c  log.cpp  log.h  merkle_bitcoin.cpp  merkle_bitcoin.h  (+38 more)
src/sgx/Enclave/bitcoin/: README  amount.cpp  base58.cpp  base58.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  hash.cpp  hash.h  key.cpp  key.h  keystore.cpp  keystore.h  portable-sgx.h  random.cpp  random.h  serialize.h  streams.h  sync.h  uint256.cpp  uint256.h  util.h  utilstrencodings.cpp
src/sgx/Enclave/bitcoin/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/sgx/Enclave/bitcoin/script/: interpreter.cpp  script.cpp  script.h  sign.cpp  standard.cpp  standard.h
src/sgx/Enclave/bitcoin/support/allocators/: zeroafterfree.h
src/sgx/Enclave/bolos/: prepare.sh
src/sgx/Enclave/bolos/patches/: secp256k1.patch
src/sgx/Enclave/bolos/secp256k1/src/: secp256k1.c
src/sgx/Enclave/eth/common/: Account.h  AccountProof.h  AccountSys.cpp  AccountSys.h  Address.cpp  Address.h  Bytes.cpp  Bytes.h  ContentProof.h  Header.cpp  Header.h  Keccak.cpp  Keccak.h  Node.cpp  Node.h  Proof.cpp  Proof.h  Queue.cpp  Queue.h  RLP.cpp  RLP.h  Receipt.h  ReceiptProof.cpp  ReceiptProof.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  ValueProof.h  uint128_t.cpp  uint128_t.h  uint256_t.cpp  uint256_t.h
src/sgx/Enclave/eth/libethash/: endian.h  internal.c  internal.h  io.h  mmap.h  sha3.c
src/sgx/Enclave/eth/orderbook/: FixedDecimal.h  Order.h  OrderBook.cpp  OrderBook.h  Server.cpp  Server.h  Tx.h  TxPool.cpp  TxPool.h
src/sgx/Enclave/lest/: lest.hpp
src/sgx/Enclave/nacl/: crypto_box.h  randombytes.c  tweetnacl.h
src/sgx/Enclave/nacl/crypto_box/: wrapper-box.cpp  wrapper-keypair.cpp  wrapper-open.cpp
src/sgx/Enclave/test_data/: settlement_bitcoin  settlement_litecoin
src/sgx/cmake/: ConfigSGX.cmake  FindJsonCppRpc.cmake  FindJsoncpp.cmake  FindLog4CXX.cmake  FindSGXSDK.cmake  Init.cmake
src/sgx/common/: Enclave.edl  base64.cpp  base64.hxx  common.h  errno.h  json11.cpp  json11.hpp  merkle_data.h  picojson.h  portable.h  ssl_context.h  utils.cpp  utils.h
src/sgx/mbedtls-SGX/example/linux/Enclave/: Enclave.edl
src/sgx/untrusted/: CMakeLists.txt  Enclave_u.c  Enclave_u.h  Utils.cpp  Utils.h  abstractenclaverpc.h  bitcoind-merkleproof.cpp  bitcoind-merkleproof.h  bitcoind-rpc.cpp  bitcoind-rpc.h  bitcoind_api.json  bitcoindrpcclient.h  blockfeeder.cpp  blockfeeder.py  blockfeeding.cpp  blockfeeding.h  config.h  deposit.py  enclave-rpc-client-impl.cpp  enclave-rpc-client-impl.h  enclave-rpc-client.h  enclave-rpc-server-impl.cpp  enclave-rpc-server-impl.h  enclave-rpc-server.h  enclave-rpc.json  enclave-utils.cpp  enclave-utils.h  enclave.json  enclave_rpc.cpp  enclave_rpc.h  enclave_test.cpp  enclaverpc.cpp  eth_balance_proof_feed.py  eth_blockfeeder.py  eth_fetch_tx.py  eth_receipt_proof_feed.py  exch-keygen.cpp  exch-merkleproof.cpp  exch-test.cpp  exch-txdebug.cpp  (+28 more)
src/sgx/untrusted/merkpath/: base64.cpp  merkpath.cpp  merkpath.h
src/sgx/untrusted/rpc/: bitcoind-client.cpp  bitcoind-client.h  enclave-server.cpp  enclave-server.h  fairness-client.cpp  fairness-client.h
